@@ -52,6 +52,7 @@ void xmlrpc_process(deno_socket_t socket_fd, char *buffer)
 	XMLRPCCmd *xml;
 	char *tmp;
 	int ac = 0;
+	int i;
 	char **av;
 	char *name = NULL;
 
@@ -135,10 +136,6 @@ void xmlrpc_process(deno_socket_t socket_fd, char *buffer)
 		                     "XMLRPC error: Invalid document end at line 1");
 	}
 	SET_SEGV_LOCATION();
-	if (av)
-	{
-		free(av);
-	}
 }
 
 /*************************************************************************/
